--- a/API/Admin/Pages/Blog/GetBlog.razor
+++ b/API/Admin/Pages/Blog/GetBlog.razor
@@ -1,4 +1,5 @@
 ﻿@page "/blog"
+@inject IJSRuntime jsRuntime
 
 <p> <a href="CreateBlog">Thêm Bài Viết</a></p>
 <div class="panel panel-primary">
@@ -39,10 +40,27 @@
     public string FormSubmitMessage { get; set; } = "Banner Not Created";
     public IEnumerable<Blog> banner { get; set; } = Enumerable.Empty<Blog>();
 
+    private bool IsLoggedIn = false;
+    private int RoleID = 0;
 
     protected async override Task OnInitializedAsync()
     {
         await CallAPI();
+        await GetSession();
+    }
+
+    private async Task GetSession()
+    {
+        var userInfoJson = await jsRuntime.InvokeAsync<string>("sessionStorage.getItem", "userSession");
+        if (!string.IsNullOrEmpty(userInfoJson))
+        {
+            var userInfo = JsonConvert.DeserializeObject<UserLogin>(userInfoJson);
+            if (userInfo != null)
+            {
+                IsLoggedIn = true;
+                RoleID = userInfo.RoleID;
+            }
+        }
     }
 
     async Task CallAPI()
