--- a/API/Admin/Pages/Blog/CreateBlog.razor
+++ b/API/Admin/Pages/Blog/CreateBlog.razor
@@ -1,5 +1,7 @@
 ﻿@page "/CreateBlog"
 @using System.Text
+@inject IJSRuntime jsRuntime
+
 <link href="/validation.css" rel="stylesheet" />
 
 <EditForm Model="BlogData" OnValidSubmit="CreateeeBanner">
@@ -38,6 +40,29 @@
     public string FormSubmitMessage { get; set; } = null;
     public string apiResponse { get; set; }
     public IBrowserFile F;
+
+    private bool IsLoggedIn = false;
+    private int RoleID = 0;
+
+    protected async override Task OnInitializedAsync()
+    {
+        await GetSession();
+    }
+
+    private async Task GetSession()
+    {
+        var userInfoJson = await jsRuntime.InvokeAsync<string>("sessionStorage.getItem", "userSession");
+        if (!string.IsNullOrEmpty(userInfoJson))
+        {
+            var userInfo = JsonConvert.DeserializeObject<UserLogin>(userInfoJson);
+            if (userInfo != null)
+            {
+                IsLoggedIn = true;
+                RoleID = userInfo.RoleID;
+            }
+        }
+    }
+
 
     private void ChangeHandler(InputFileChangeEventArgs e)
     {
